--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
-- name: pal-tracker
+- name: pal-tracker-jenkins-poc
   path: build/libs/pal-tracker.jar
   routes:
-  - route: ginger-pal-tracker-jenkins-poc.cfapps.io
+  - route: team-ginger-pal-tracker-jenkins-poc.cfapps.io
   env:
     WELCOME_MESSAGE: Hello from PCF -- the jenkins poc setup environment is up and running
