--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - name: pal-tracker-jenkins-poc
-  path: build/libs/pal-tracker.jar
+  path: build/libs/pal-tracker-jenkins-poc.jar
   routes:
   - route: team-ginger-pal-tracker-jenkins-poc.cfapps.io
   env:
