--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,7 @@
 applications:
 - name: pal-tracker-jenkins-poc
   path: build/libs/pal-tracker-jenkins-poc.jar
+  memory: 300M
   routes:
   - route: team-ginger-pal-tracker-jenkins-poc.cfapps.io
   env:
