--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ plugins {
     id "org.springframework.boot" version "1.5.4.RELEASE"
 }
 
-repositories {
+/*repositories {
     mavenCentral()
-}
+}*/
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -19,3 +19,47 @@ bootRun.environment( [
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
 ])
+
+
+buildscript {
+    repositories {
+        maven {
+            url 'http://pcfdevelopment-nttdata.eastus.cloudapp.azure.com/artifactory/gradle-dev'
+            credentials {
+                username = "${artifactory_user}"
+                password = "${artifactory_password}"
+            }
+        }
+
+    }
+    dependencies {
+        //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
+    }
+}
+
+allprojects {
+    apply plugin: "com.jfrog.artifactory"
+}
+
+artifactory {
+    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    publish {
+        repository {
+            repoKey = 'gradle-dev-local'
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+            maven = true
+
+        }
+    }
+    resolve {
+        repository {
+            repoKey = 'gradle-release'
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+            maven = true
+
+        }
+    }
+}
