Integrating artifactory with jenkins6

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
             url 'http://pcfdevelopment-nttdata.eastus.cloudapp.azure.com/artifactory/gradle-dev'
             credentials {
                 username = "hamidou.barry@nttdata.com"
-                password = "${artifactory_password}"
+                password = "Password@123"
             }
         }
 
