--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,10 @@ buildscript {
     }
 }
 
-plugins {
-    id "java"
-    id "org.springframework.boot" version "1.5.4.RELEASE"
-    id "com.jfrog.artifactory"
-}
+apply plugin: "java"
+apply plugin: "org.springframework.boot:1.5.4.RELEASE"
+apply plugin: "com.jfrog.artifactory"
+
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
