Integrating artifactory with jenkins8

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,11 @@ buildscript {
 }
 
 apply plugin: "java"
-apply plugin: "org.springframework.boot:1.5.4.RELEASE"
 apply plugin: "com.jfrog.artifactory"
+
+plugins {
+    id: "org.springframework.boot" version "1.5.4.RELEASE"
+}
 
 
 dependencies {
