Integrating artifactory with jenkins11

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
             url 'http://pcfdevelopment-nttdata.eastus.cloudapp.azure.com/artifactory/gradle-dev'
             credentials {
                 username = "hamidou.barry@nttdata.com"
-                password = "Password@123"
+                password = "AP2Tz7EJ7DNW2E4Rkd9nVgbhMAt"
             }
         }
 
@@ -25,12 +25,12 @@ dependencies {
 }
 
 artifactory {
-    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    contextUrl = "http://pcfdevelopment-nttdata.eastus.cloudapp.azure.com/artifactory"   //The base Artifactory URL if not overridden by the publisher/resolver
     publish {
         repository {
             repoKey = 'gradle-dev-local'
-            username = "${artifactory_user}"
-            password = "${artifactory_password}"
+            username = "hamidou.barry@nttdata.com"
+            password = "AP2Tz7EJ7DNW2E4Rkd9nVgbhMAt"
             maven = true
 
         }
@@ -38,8 +38,8 @@ artifactory {
     resolve {
         repository {
             repoKey = 'gradle-release'
-            username = "${artifactory_user}"
-            password = "${artifactory_password}"
+            username = "hamidou.barry@nttdata.com"
+            password = "AP2Tz7EJ7DNW2E4Rkd9nVgbhMAt"
             maven = true
 
         }
@@ -51,9 +51,9 @@ artifactory {
 }*/
 
 
-bootRun.environment( [
+/*bootRun.environment( [
     "WELCOME_MESSAGE": "Hello from local environment",
-])
+])*/
 
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
