--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
     }
 }
 
@@ -59,5 +59,11 @@ artifactory {
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
 ])
+
+artifactoryPublish {
+    skip = false //Skip build info analysis and publishing (false by default)
+    contextUrl = 'http://pcfdevelopment-nttdata.eastus.cloudapp.azure.com/artifactory'
+}
+
 
 
