--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-/*
+
 plugins {
     id "java"
     id "org.springframework.boot" version "1.5.4.RELEASE"
@@ -20,11 +20,11 @@ bootRun.environment( [
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
 ])
-*/
 
 
 
-buildscript {
+
+/*buildscript {
     repositories {
         jcenter()
 
@@ -75,7 +75,7 @@ artifactory {
     }
 }
 
-
+*/
 
 
 
