--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 ---
 applications:
-- name: pal-tracker-jenkins-poc
-  path: build/libs/pal-tracker-jenkins-poc.jar
+- name: pal-tracker
+  path: build/libs/pal-tracker.jar
   memory: 1G
   routes:
-  - route: team-ginger-pal-tracker-jenkins-poc.cfapps.io
+  - route: team-ginger-pal-tracker.cfapps.io
   env:
     WELCOME_MESSAGE: Hello from PCF -- the jenkins poc setup environment is up and running
